--- a/my_mlops_project_stijn/databricks-resources/batch-inference-workflow-resource.yml
+++ b/my_mlops_project_stijn/databricks-resources/batch-inference-workflow-resource.yml
@@ -8,7 +8,7 @@ new_cluster: &new_cluster
 
 permissions: &permissions
   permissions:
-    - level: CAN_VIEW
+    - level: CAN_MANAGE
       group_name: users
 
 resources:
