--- a/my_mlops_project_stijn/bundle.yml
+++ b/my_mlops_project_stijn/bundle.yml
@@ -33,7 +33,7 @@ environments:
     default: true
     workspace:
       # TODO: add dev workspace URL
-      host:
+      host: https://e2-demo-field-eng.cloud.databricks.com
 
   staging:
     workspace:
